--- a/SelahSeries/Views/EMIMgt/EventIndex.cshtml
+++ b/SelahSeries/Views/EMIMgt/EventIndex.cshtml
@@ -61,7 +61,7 @@
                 @Html.DisplayFor(modelItem => item.Country)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Title)
+                @Html.DisplayFor(modelItem => item.Time)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ImgUrl)
