--- a/SelahSeries/Views/EMI/Volunteer.cshtml
+++ b/SelahSeries/Views/EMI/Volunteer.cshtml
@@ -64,7 +64,7 @@
                                         <option value="21-25">21-25</option>
                                         <option value="26-30">26-30</option>
                                         <option value="31-35">31-35</option>
-                                        <option value="35-46">35-46</option>
+                                        <option value="35-46">36-45</option>
                                         <option value="47-100">46 & above</option>
                                     </select>
                                     <div class="select-dropdown"></div>
@@ -73,7 +73,7 @@
                         </div>
                         <div class="col-2">
                             <div class="input-group">
-                                <input class="input--style-2" type="number" placeholder="Phone Number" name="phone">
+                                <input class="input--style-2 phone" type="number" placeholder="Phone Number" name="phone">
                             </div>
                         </div>
                     </div>
