--- a/SelahSeries/Views/EMI/_EMILayout.cshtml
+++ b/SelahSeries/Views/EMI/_EMILayout.cshtml
@@ -5,7 +5,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="img/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="~/sitersc/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="~/sitersc/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="~/sitersc/favicon-16x16.png">
     <title>@ViewBag.Title</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="~/EMI/css/bootstrap.css">
@@ -33,7 +35,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href="index.html"><img height="85" src="~/EMI/img/logo.jpg" alt=""></a>
+                    <a class="navbar-brand logo_h" href="index.html"><img height="85" src="~/EMI/img/emerald tst.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -76,7 +78,7 @@
                 <div class="col-lg-3  col-md-6 col-sm-6">
                     <div class="single-footer-widget">
                         <h6 class="footer_title">About Initiative</h6>
-                        <p color="#777">We are a group targeted at giving hope to women who have been lessened by the shame and rejection the society throws at them. We lit the faces of those that have been abused and molested. </p>
+                        <p color="#777">We are a group targeted at giving hope to teenagers and young girls who have been lessened by the shame and rejection the society throws at them. We lit the faces of those that have been abused and molested. </p>
                         
                     </div>
                 </div>
@@ -84,11 +86,15 @@
                     <div class="single-footer-widget">
                         <h6 class="footer_title">Navigation Links</h6>
                         <div class="row">
-                            <div class="col-8">
+                            <div class="col-4">
                                 <ul class="list">
                                     <li><a href="~/emeraldlight/index">Home</a></li>
                                     <li><a href="~/emeraldlight/gallery">Gallery</a></li>
                                     <li><a href="~/emeraldlight/contact-us">Contact</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-4">
+                                <ul class="list">
                                     <li><a href="~/emeraldlight/volunteer">Volunteer</a></li>
                                     <li><a href="~/emeraldlight/events">Events</a></li>
                                 </ul>
@@ -98,8 +104,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-footer-widget">
-                        <h6 class="footer_title">Newsletter</h6>
-                        <p>Subscribe to receive update on our events and projects.</p>
+                        <h6 class="footer_title">Subscribe to Newsletter</h6>
+                        <p>Subscribe to receive updates on our events &amp; projects and also notifications from Selah Series blog.</p>
                         <div id="mc_embed_signup">
                             <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative">
                                 <div class="input-group d-flex flex-row">
@@ -135,10 +141,8 @@
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
                 <div class="col-lg-4 col-md-4 footer-social">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-dribbble"></i></a>
-                    <a href="#"><i class="fa fa-behance"></i></a>
+                    <a href="https://web.facebook.com/Emerald-Light-Initiative-102079038336848" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a href="https://twitter.com/IntiativeLight?s=09" target="_blank"><i class="fa fa-twitter"></i></a>
                 </div>
             </div>
         </div>
