implemented requested text changes

--- a/SelahSeries/Views/EMI/About.cshtml
+++ b/SelahSeries/Views/EMI/About.cshtml
@@ -46,7 +46,7 @@
 </section>
 <!--================End Welcome Area =================-->
 <!--================Feature Area =================-->
-<section class="feature_area p_120">
+<section class="feature_area p_120 feature_area2">
     <div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
     <div class="container">
         <div class="white_title">
@@ -116,5 +116,8 @@
 <style>
     button{
         cursor:pointer;
+    }
+    .feature_area2{
+        margin-bottom: 150px;
     }
 </style>
