--- a/SelahSeries/Views/EMI/Index.cshtml
+++ b/SelahSeries/Views/EMI/Index.cshtml
@@ -16,7 +16,7 @@
         <div class="container">
 
             <div class="banner_content text-center">
-                <h5>The Emerald Light Initiative : &nbsp&nbsp&nbsp    A Selah Series Project</h5>
+                <h5 class="selah_project">The Emerald Light Initiative : &nbsp&nbsp&nbsp    A Selah Series Project</h5>
 
                 <h3>We shine the Light to give you Hope Again!</h3>
                 <p>A lot of teenagers and young girls have fallen victims of societal rejection due to early unwanted pregnancies and hurtful<br /> relatonships. Some lose hope and are never able to get back up until they have an encounter with Light.</p>
@@ -79,10 +79,11 @@
                 <div class="welcome_text">
                     <h4>Emerald Light Initiative</h4>
                     <p>
-                        Girls are a very significant part of the society. Yeah, both genders are.  However, girls are more prone to falling victim of various forms of abuse which
-                        pose a detrimental effect on their life, future and total well being. We at Emerald Light Initiative have risen to be a voice for the females - 
-                        youths and teenagers. We provide support and counselling to those who are still nested in their unappealing past experiences. We also organize projects and events to sentisize females
-                        and render financial support. This is a family of love, of light and of grace! You are welcome to be a part of us. Do reach out also if you are in need of online counselling.
+                        Young girls caught in the act through early unwanted pregnancies are targets of our wrath. Society responds to them, often, in ways that are not healthy to their mental, 
+                        emotional and spiritual well-being. This poses detrimental effects on the lives, future and total well-being of these girls as well as their children. We at 
+                        Emerald Light Initiative have risen to be a voice for these young beauties. We provide advocacy, support and counselling to them. 
+                        We also spread awareness about the effects of society stigmatization on these young girls. This is a family of love, of light and of grace! 
+                        You are welcome to be a part of us. Do reach out also if you are in need of online counselling.
                     </p>
                 </div>
             </div>
