--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -340,26 +340,28 @@
                         </div>
                     </div>
 
-                    <!--  -->
+                    <!--Projects-->
 
                     <div class="sidebar_section">
-                        <div class="advertising_2">
-                            <div class="advertising_background" style="background-image:url(/NewFolder2/images/post_18.jpg)"></div>
-                            <div class="advertising_2_content d-flex flex-column align-items-center justify-content-center">
-                                <div class="advertising_2_link"><a style="color:white">Selah <span>Series</span></a></div>
+                        <div class="sidebar_title_container">
+                            <div class="sidebar_title">Projects</div>
+                            <div class="advertising_2">
+                                <div class="advertising_background" style="background-image:url(/EMI/img/emerald_tst.png)"></div>
+                                @*<div class="advertising_2_content d-flex flex-column align-items-center justify-content-center"</div>*@
+                            </div>
+                            <br />
+                            <div>
+                                <p text-align="justify">The Emerald Light Project is targeted at advocating for and supporting pregnant teenagers & teen mothers</p>
+
+                                <p>Click <a href="~/emeraldlight">here</a> to go to Emerald Light.</p>
+                                <br />
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-
-
         </div>
-
-
     </div>
-
 </div>
 
 
